crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_unescaped_newline.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..11,
            value: FString(
                ExprFString {
                    range: 0..11,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..11,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 4..5,
                                                value: "\n",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..8,
                                                expression: Name(
                                                    ExprName {
                                                        range: 6..7,
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
