crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_empty_fstring.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: "parse_suite(r#\"f\"\"\"#, \"<test>\").unwrap()"
---
[
    Expr(
        StmtExpr {
            range: 0..3,
            value: FString(
                ExprFString {
                    range: 0..3,
                    value: FStringExprValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..3,
                                    elements: [],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
