crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_f_string_concat_1.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..17,
            value: FString(
                ExprFString {
                    range: 0..17,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        unicode: false,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 9..17,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 11..16,
                                                    value: "world",
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
