crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_f_string_concat_3.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..22,
            value: FString(
                ExprFString {
                    range: 0..22,
                    value: FStringExprValue {
                        inner: Concatenated(
                            [
                                String(
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        unicode: false,
                                    },
                                ),
                                FString(
                                    FString {
                                        range: 9..22,
                                        elements: [
                                            Literal(
                                                FStringLiteralElement {
                                                    range: 11..16,
                                                    value: "world",
                                                },
                                            ),
                                            Expression(
                                                FStringExpressionElement {
                                                    range: 16..21,
                                                    expression: String(
                                                        ExprString {
                                                            range: 17..20,
                                                            value: StringExprValue {
                                                                inner: Single(
                                                                    StringLiteral {
                                                                        range: 17..20,
                                                                        value: "!",
                                                                        unicode: false,
                                                                    },
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                },
                                            ),
                                        ],
                                    },
                                ),
                            ],
                        ),
                    },
                },
            ),
        },
    ),
]
